# snowball72_test

./: .env.exameple  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  자가평가.md
alembic/: env.py
alembic/versions/: 148c819b5489_stock의_price_칼럼_데이터_타입_변경.py  751a453883b1_backtestresult의_data_id_타입_변경.py  8d4a7ee5996e_add_table_stock.py  9c0a545bdee5_backtestresult의_data_id_칼럼_타입_변경.py  cb26f511f0d3_backtestresult_모델_추가.py
src/: api.py  config.py  database.py  main.py
src/snowball/: batch_update_stock.py  flows.py  models.py  schema.py  service.py  view.py  views.py
